--- a/spartacus-base/src/app/app.component.html
+++ b/spartacus-base/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-durum></app-durum>
 <cx-storefront></cx-storefront>
 <app-custom-debbuger></app-custom-debbuger>
+<app-custom-address></app-custom-address>
